# mkg3a

./: .gitlab-ci.yml  CMakeLists.txt  COPYING  README  README.md  config.h.in  convert565.c  g3a.c  g3a.h  getopt.c  icodump.c  icon.c  icon.h  main.c  util.c  util.h
doc/: CMakeLists.txt  mkg3a.1
example/: Makefile
fx-imglib/: compressor.py  image.c  image.h  lzf.c  lzf.py
src/: CMakeLists.txt  config.h.in  convert565.c  g3a-icondump.c  g3a-updateicon.c  g3a.c  g3a.h  getopt.c  getopt.h  images.c  images.h  mkg3a.c  util.c  util.h
